tests/cases/traits/errors/trait-object-unknown.ari
struct Holder {
  value: dyn Missing,
}

fn main() -> i64 {
  0
}
